fixed service field naming
